minor bug changes(pagination, search functionality)

--- a/ShoppingCart/src/main/resources/templates/Admin/products.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/products.html
@@ -57,9 +57,9 @@
                                 </td>
                                 <td>[[${product.title}]]</td>
                                 <td>[[${product.category}]]</td>
-                                <td>[[${product.price}]]</td>
+                                <td>[[${product.price}]]$</td>
                                 <td>[[${product.discount}]]</td>
-                                <td>[[${product.discountPrice}]]</td>
+                                <td>[[${product.discountPrice}]]$</td>
                                 <td>[[${product.isActive}]]</td>
                                 <td>[[${product.stock}]]</td>
                                 <td>
@@ -82,9 +82,9 @@
                             </td>
                             <td>[[${p.title}]]</td>
                             <td>[[${p.category}]]</td>
-                            <td>[[${p.price}]]</td>
+                            <td>[[${p.price}]]$</td>
                             <td>[[${p.discount}]]</td>
-                            <td>[[${p.discountPrice}]]</td>
+                            <td>[[${p.discountPrice}]]$</td>
                             <td>[[${p.isActive}]]</td>
                             <td>[[${p.stock}]]</td>
                             <td>
