--- a/ShoppingCart/src/main/resources/templates/User/order.html
+++ b/ShoppingCart/src/main/resources/templates/User/order.html
@@ -70,7 +70,7 @@
                                 <tbody>
                                 <tr>
                                     <td>Total price</td>
-                                    <td>[[${netPrice}]]</td>
+                                    <td>[[${netPrice}]]$</td>
                                 </tr>
                                 <tr>
                                     <td>Delivery fee</td>
@@ -82,7 +82,7 @@
                                 </tr>
                                 <tr class="border-top">
                                     <td>Subtotal</td>
-                                    <td>[[${subtotal}]]</td>
+                                    <td>[[${subtotal}]]$</td>
                                 </tr>
                                 </tbody>
                             </table>
