--- a/ShoppingCart/src/main/resources/templates/index.html
+++ b/ShoppingCart/src/main/resources/templates/index.html
@@ -59,7 +59,7 @@
                         <img th:src="@{'img/product_img/'+${product.image}}" width="65%" height="140px"><br>
                         <p class="text-center">
                             <a th:href="@{'/product/'+${product.id}}" class="text-decoration-none text-dark">
-                            [[${product.title}]]>
+                            [[${product.title}]]
                             </a>
                         </p>
                     </div>
