--- a/ShoppingCart/src/main/resources/templates/Admin/add_product.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/add_product.html
@@ -43,6 +43,10 @@
                                 <input type="number" name="price" class="form-control">
                             </div>
                             <div class="mb-3">
+                                <label>Discount: </label>
+                                <input type="number" name="discount" class="form-control" value="0">
+                            </div>
+                            <div class="mb-3">
                                 <label>Status</label>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="isActive"
