--- a/ShoppingCart/src/main/resources/templates/Admin/orders.html
+++ b/ShoppingCart/src/main/resources/templates/Admin/orders.html
@@ -58,7 +58,7 @@
                                 </td>
                                 <td>[[${order.orderDate}]]</td>
                                 <td>[[${order.product.title}]]</td>
-                                <td>[[${order.quantity} * ${order.price}]]</td>
+                                <td>[[${order.quantity} * ${order.price}]]$</td>
                                 <td>[[${order.status}]]</td>
                                 <td>
                                     <form action="/admin/update-order-status" method="post">
@@ -106,7 +106,7 @@
                             </td>
                             <td>[[${order.orderDate}]]</td>
                             <td>[[${order.product.title}]]</td>
-                            <td>[[${order.quantity} * ${order.price}]]</td>
+                            <td>[[${order.quantity} * ${order.price}]]$</td>
                             <td>[[${order.status}]]</td>
                             <td>
                                 <form action="/admin/update-order-status" method="post">
