--- a/ShoppingCart/src/main/resources/templates/product.html
+++ b/ShoppingCart/src/main/resources/templates/product.html
@@ -86,7 +86,7 @@
                 <div class="row">
                     <div class="col-md-4">Total Products: [[${totalElements}]]</div>
                     <div class="col-md-6">
-                        <th:block th:if="${productsSize > 0}">
+                        <th:block th:if="${activeProducts.size() > 0}">
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination">
                                     <li class="page-item">
