--- a/ShoppingCart/src/main/resources/templates/product.html
+++ b/ShoppingCart/src/main/resources/templates/product.html
@@ -91,21 +91,25 @@
                                 <ul class="pagination">
                                     <li class="page-item">
                                         <a class="page-link"
-                                           th:href="@{'/products?pageN='+(${pageN - 1}) + '&category=' + ${paramValue}}"
+                                           th:href="@{'/products?pageN='+ (${pageN != null ? pageN - 1 : 1}) + '&category=' + ${paramValue}}"
                                            aria-label="Previous" th:classappend="${isFirst} ? 'disabled':''">
                                             <span aria-hidden="true">&laquo</span>
                                         </a>
                                     </li>
-                                    <li th:each="i:${#numbers.sequence(1, totalPages)}" class="page-item"
-                                        th:classappend="${pageN + 1 == i} ? 'active':''"
+                                    <li th:each="i : ${#numbers.sequence(1, totalPages != null ? totalPages : 1)}"
+                                        class="page-item"
+                                        th:classappend="${pageN != null && pageN + 1 == i} ? 'active':''"
                                     >
-                                        <a class="page-link" th:href="@{'/products?pageN='+(${i - 1}) + '&category=' + ${paramValue}}">
+                                        <a class="page-link"
+                                           th:href="@{'/products?pageN='+(${i - 1}) + '&category=' + ${paramValue}}">
                                             [[${i}]]
                                         </a>
                                     </li>
                                     <li class="page-item">
-                                        <a class="page-link" th:href="@{'/products?pageN='+(${pageN + 1}) + '&category=' + ${paramValue}}"
-                                           aria-label="Next" th:classappend="${isLast} ? 'disabled':''">
+                                        <a class="page-link"
+                                           th:classappend="${pageN != null && pageN + 1 == totalPages} ? 'disabled':''"
+                                           th:href="@{'/products?pageN='+(${pageN != null ? pageN + 1 : 1}) + '&category=' + ${paramValue}}"
+                                           aria-label="Next">
                                             <span aria-hidden="true">&raquo</span>
                                         </a>
                                     </li>
