cart deletion after placing order

--- a/ShoppingCart/src/main/resources/templates/User/cart.html
+++ b/ShoppingCart/src/main/resources/templates/User/cart.html
@@ -7,9 +7,9 @@
 <body>
 <section>
     <div class="container mt-5 p-5">
-        <div class="card">
+        <div class="row">
             <div class="card-header text-center">
-                <p class="fs-4">Cart Page</p>
+                <p class="fs-4">My Carts</p>
                 <th:block th:if="${session.succMsg}">
                     <p class="text-success fw-bold">[[${session.succMsg}]]</p>
                     <th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
@@ -19,58 +19,62 @@
                     <th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
                 </th:block>
             </div>
-            <div class="card-body">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">Serial Number</th>
-                        <th scope="col">Image</th>
-                        <th scope="col">Product Name</th>
-                        <th scope="col">Price</th>
-                        <th scope="col" class="text-center">Quantity</th>
-                        <th scope="col">Total Price</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:if="${carts.isEmpty()}">
-                        <td colspan="6" class="text-center">
-                            <p>Your cart is empty!</p>
-                        </td>
-                    </tr>
-                    <tr th:each="cart, c : ${carts}">
-                        <th scope="row">[[${c.count}]]</th>
-                        <td>
-                            <img th:src="@{'/img/product_img/'+${cart.product.image}}" width="70px" height="70px">
-                        </td>
-                        <td>[[${cart.product.title}]]</td>
-                        <td>[[${cart.product.discountPrice}]]</td>
-                        <td class="text-center">
-                            <a th:href="@{'/user/quantityUpdate?symbol=minus&cartId='+${cart.id}}">
-                                <i class="fa-solid fa-minus"></i>
-                            </a>
-                            [[${cart.quantity}]]
-                            <a th:href="@{'/user/quantityUpdate?symbol=plus&cartId='+${cart.id}}">
-                                <i class="fa-solid fa-plus"></i>
-                            </a>
-                        </td>
-                        <td>[[${cart.totalPrice}]]</td>
-                    </tr>
-                    <tr>
-                        <td colspan="4"></td>
-                        <td class="fw-bold">Total price</td>
-                        <td class="fw-bold">[[${netPrice}]]</td>
-                    </tr>
 
-                    </tbody>
-                </table>
-                <div class="text-center">
-                    <tr th:if="${!carts.isEmpty()}">
-                        <td colspan="6" class="text-center">
-                            <a href="/user/order" class="btn btn-warning">Proceed to payment</a>
-                        </td>
-                    </tr>
+            <th:block th:if="${carts.size() > 0}">
+                <div class="card-body">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col">Serial Number</th>
+                            <th scope="col">Image</th>
+                            <th scope="col">Product Name</th>
+                            <th scope="col">Price</th>
+                            <th scope="col" class="text-center">Quantity</th>
+                            <th scope="col">Total Price</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="cart, c : ${carts}">
+                            <th scope="row">[[${c.count}]]</th>
+                            <td>
+                                <img th:src="@{'/img/product_img/'+${cart.product.image}}" width="70px" height="70px">
+                            </td>
+                            <td>[[${cart.product.title}]]</td>
+                            <td>[[${cart.product.discountPrice}]]</td>
+                            <td class="text-center">
+                                <a th:href="@{'/user/quantityUpdate?symbol=minus&cartId='+${cart.id}}">
+                                    <i class="fa-solid fa-minus"></i>
+                                </a>
+                                [[${cart.quantity}]]
+                                <a th:href="@{'/user/quantityUpdate?symbol=plus&cartId='+${cart.id}}">
+                                    <i class="fa-solid fa-plus"></i>
+                                </a>
+                            </td>
+                            <td>[[${cart.totalPrice}]]</td>
+                        </tr>
+                        <tr>
+                            <td colspan="4"></td>
+                            <td class="fw-bold">Total price</td>
+                            <td class="fw-bold">[[${netPrice}]]</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                    <div class="text-center">
+                        <tr th:if="${!carts.isEmpty()}">
+                            <td colspan="6" class="text-center">
+                                <a href="/user/order" class="btn btn-warning">Proceed to payment</a>
+                            </td>
+                        </tr>
+                    </div>
                 </div>
-            </div>
+            </th:block>
+            <th:block th:unless="${carts.size() > 0}">
+                <p class="text-center fs-5 fw-bold text-danger">Your cart is empty.</p><br>
+                <p class="text-center fs-5 fw-bold">Visit
+                    <a href="/products">Products</a> page to shop.
+                </p>
+            </th:block>
         </div>
     </div>
 </section>
