--- a/ShoppingCart/src/main/resources/templates/base.html
+++ b/ShoppingCart/src/main/resources/templates/base.html
@@ -58,8 +58,14 @@
                 <th:block th:if="${user != null}">
                     <th:block th:if="${user.role == 'ROLE_USER'}">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/user/cart"><i
-                                    class="fa-solid fa-cart-shopping"></i> Cart ([[${cartCount}]])</a>
+                            <th:block th:if="${cartCount > 0}">
+                                <a class="nav-link active" aria-current="page" href="/user/cart"><i
+                                        class="fa-solid fa-cart-shopping"></i> Cart ([[${cartCount}]])</a>
+                            </th:block>
+                            <th:block th:unless="${cartCount > 0}">
+                                <a class="nav-link active" aria-current="page" href="/user/cart"><i
+                                        class="fa-solid fa-cart-shopping"></i> Cart</a>
+                            </th:block>
                         </li>
                     </th:block>
                     <li class="nav-item dropdown">
